--- a/opmaak.css
+++ b/opmaak.css
@@ -35,7 +35,7 @@ ul {
     background-color: paleturquoise; /* backgroundcolour van #body1 (onze homepage)*/
   }
  <li class="dropdown">
-          <a href="3-lagenmodel.html" class="dropbtn">3-lagenmodel</a>
+          <a href="drielagenmodel.html" class="dropbtn">drielagenmodel</a>
           <div class="dropdown-content">
               <a href="#">Toepassingslaag</a>
               <a href="#">Transportlaag</a>
